Add frames-per-second timer

--- a/www/index.html
+++ b/www/index.html
@@ -27,6 +27,10 @@
             align-items: center;
             justify-content: center;
         }
+        #fps {
+            white-space: pre;
+            font-family: monospace;
+        }
     </style>
 </head>
 <body>
@@ -44,6 +48,8 @@
         <li>Shift-LeftClick: Pulsar</li>
         <li>Alt-LeftClick: Glider</li>
     </ul>
+    <div id="fps"></div>
+
 </main>
 <script src="./bootstrap.js"></script>
 </body>
